update config and payload interface{}

--- a/todo/configs/postapi.conf
+++ b/todo/configs/postapi.conf
@@ -20,34 +20,34 @@ components.post-api.external.api = {
 			errors {
 				to-queue {
 					seq = 1
-					url = "spirit://actors/mns/endpoint?queue=api-call-error"
+					url = "spirit://actors/fbp/mns/endpoint?queue=api-call-error"
 				}
 
 				response {
 					seq = 2
-					url = "spirit://actors/post-api/external?action=callback"
+					url = "spirit://actors/fbp/post-api/external?action=callback"
 				}
 			}
 
 			normal {
 				to-queue-new-task {
 					seq = 1
-					url = "spirit://actors/mns/endpoint?queue=todo-task-new"
+					url = "spirit://actors/fbp/mns/endpoint?queue=todo-task-new"
 				}
 
 				to-todo {
 					seq = 2
-					url = "spirit://actors/examples-todo/todo?action=new"
+					url = "spirit://actors/fbp/examples-todo/todo?action=new"
 				}
 
 				to-callback-queue {
 					seq = 3
-					url = "spirit://actors/mns/endpoint?queue=api-call-back"
+					url = "spirit://actors/fbp/mns/endpoint?queue=api-call-back"
 				}
 
 				response {
 					seq = 4
-					url = "spirit://actors/post-api/external?action=callback"
+					url = "spirit://actors/fbp/post-api/external?action=callback"
 				}
 			}
 		}
@@ -59,34 +59,34 @@ components.post-api.external.api = {
 			errors {
 				to-queue {
 					seq = 1
-					url = "spirit://actors/mns/endpoint?queue=api-call-error"
+					url = "spirit://actors/fbp/mns/endpoint?queue=api-call-error"
 				}
 
 				response {
 					seq = 2
-					url = "spirit://actors/post-api/external?action=callback"
+					url = "spirit://actors/fbp/post-api/external?action=callback"
 				}
 			}
 
 			normal {
 				to-queue-get-task {
 					seq = 1
-					url = "spirit://actors/mns/endpoint?queue=todo-task-get"
+					url = "spirit://actors/fbp/mns/endpoint?queue=todo-task-get"
 				}
 
 				to-todo {
 					seq = 2
-					url = "spirit://actors/examples-todo/todo?action=get"
+					url = "spirit://actors/fbp/examples-todo/todo?action=get"
 				}
 
 				to-callback-queue {
 					seq = 3
-					url = "spirit://actors/mns/endpoint?queue=api-call-back"
+					url = "spirit://actors/fbp/mns/endpoint?queue=api-call-back"
 				}
 
 				response {
 					seq = 4
-					url = "spirit://actors/post-api/external?action=callback"
+					url = "spirit://actors/fbp/post-api/external?action=callback"
 				}
 			}
 		}
