add test certs for test http2

--- a/todo/configs/todo-standalone.conf
+++ b/todo/configs/todo-standalone.conf
@@ -1,3 +1,30 @@
+components.post-api.external.http {
+	address  = ":443"
+
+	shutdown-timeout = 30s
+
+	pprof = {
+		enabled = false
+		block-profile-rate = 0
+	}
+
+	ssl {
+		enabled = true
+		cert-file = "configs/certs/server.pem"
+		cert-key = "configs/certs/server.key"
+	}
+
+	cors {
+		allow-origins = ["*"]
+		allow-methods = ["POST"]
+		allow-headers = ["X-Api", "X-Api-Batch", "X-Api-Timeout", "Origin"]
+		expose-headers = ["Content-Length"]
+		allow-credentials = true
+		max-age = 12h
+	}
+}
+
+
 components.post-api.external.api = {
 
 	todo-task-new {
