update build config

--- a/todo/configs/build-todo.conf
+++ b/todo/configs/build-todo.conf
@@ -2,7 +2,7 @@
 todo  {
 
 	# import packages
-	packages = ["github.com/spirit-component/examples/todo"]
+	packages = ["github.com/spirit-component/examples/todo", "github.com/spirit-component/mns"]
 
 	build-args = []
 
@@ -22,6 +22,13 @@ todo  {
 			fetcher = goget
 			args = ["-v"]
 			url = "github.com/spirit-component/examples/todo"
+			revision = master
+		}
+
+		mns {
+			fetcher = goget
+			args = ["-v"]
+			url = "github.com/spirit-component/mns"
 			revision = master
 		}
 	}
