update graph section

--- a/todo/configs/postapi.conf
+++ b/todo/configs/postapi.conf
@@ -12,7 +12,7 @@ components.mns.endpoint {
 	}
 }
 
-components.post-api.external.api = {
+components.post-api.external.grapher.default = {
 
 	todo-task-new {
 		name  = "todo.task.new"
