--- a/todo/configs/todo-standalone.conf
+++ b/todo/configs/todo-standalone.conf
@@ -25,7 +25,7 @@ components.post-api.external.http {
 }
 
 
-components.post-api.external.api = {
+components.post-api.external.grapher.default = {
 
 	todo-task-new {
 		name  = "todo.task.new"
