--- a/todo/configs/build-todo.conf
+++ b/todo/configs/build-todo.conf
@@ -4,7 +4,10 @@ todo  {
 	# import packages
 	packages = ["github.com/spirit-component/examples/todo", "github.com/spirit-component/mns"]
 
-	build-args = []
+	build-args = {
+		go-get = ["-v"]
+		go-build = ["-v"]
+	}
 
 	fetchers {
 		git {
