rename port from normal to entrypoint

--- a/todo/configs/postapi.conf
+++ b/todo/configs/postapi.conf
@@ -17,7 +17,7 @@ components.post-api.external.grapher.default = {
 	todo-task-new {
 		name  = "todo.task.new"
 		graph = {
-			errors {
+			error {
 				to-queue {
 					seq = 1
 					url = "spirit://actors/fbp/mns/endpoint?queue=api-call-error"
@@ -29,7 +29,7 @@ components.post-api.external.grapher.default = {
 				}
 			}
 
-			normal {
+			entrypoint {
 				to-queue-new-task {
 					seq = 1
 					url = "spirit://actors/fbp/mns/endpoint?queue=todo-task-new"
@@ -56,7 +56,7 @@ components.post-api.external.grapher.default = {
 	todo-task-get {
 		name  = "todo.task.get"
 		graph = {
-			errors {
+			error {
 				to-queue {
 					seq = 1
 					url = "spirit://actors/fbp/mns/endpoint?queue=api-call-error"
@@ -68,7 +68,7 @@ components.post-api.external.grapher.default = {
 				}
 			}
 
-			normal {
+			entrypoint {
 				to-queue-get-task {
 					seq = 1
 					url = "spirit://actors/fbp/mns/endpoint?queue=todo-task-get"
